Changed texture loading to be more generic
git-svn-id: http://jmonkeyengine.googlecode.com/svn/trunk@1136 75d07b2b-3a1a-0410-a2c5-0572b91ccdca